--- a/src/styles/media-query.scss
+++ b/src/styles/media-query.scss
@@ -155,7 +155,7 @@
           display: flex;
           justify-content: center;
           .logo {
-            display: none;
+            font-size: 2.5rem;
           }
         }
 
