--- a/src/styles/media-query.scss
+++ b/src/styles/media-query.scss
@@ -1,9 +1,9 @@
-/* ++++++++++ Media Query for small Phone screen with max width of 360px ++++++++++ */
+/* ++++++++++ Media Query for max width of 360px ++++++++++ */
 @media (max-width: #{$small}) {
   .app {
     /* Services componenet */
     .service-container {
-      margin-top: 2rem;
+      margin: 2rem auto;
       width: 99%;
 
       .header-container {
@@ -99,6 +99,7 @@
 
     /* Contact component */
     .contact-container {
+      margin: 2rem auto;
       width: 99%;
 
       .contact-sub-container {
@@ -215,8 +216,8 @@
   }
 }
 
-/* ++++++++++ Media Query for Phone screen with max width of 599px ++++++++++ */
-@media (min-width: #{$medium}) and (max-width: 800px) {
+/* ++++++++++ Media Query between 361px and 600px  ++++++++++ */
+@media (min-width: 361px) and (max-width: #{$medium}) {
   .app {
     /*----- Start of Service component media query----- */
     .service-container {
@@ -320,7 +321,7 @@
 }
 
 /* ++++++++++ Media Query for Tablet screen with min 600px and max 800px  ++++++++++ */
-@media (min-width: $tablet-screen-min) and (max-width: 800px) {
+@media (min-width: 601px) and (max-width: 800px) {
   .app {
     /*----- Start of Service component media query----- */
     .service-container {
@@ -563,6 +564,19 @@
   }
 }
 
+/* 
+
+
+
+
+
+
+
+
+
+
+Other media query
+*/
 /* ++++++++++ Media Query for Phone screen with max width of 599px ++++++++++ */
 @media (max-width: $phone-screen) {
   .app {
