--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -148,7 +148,6 @@
 /* ++++++++++ Start of Aboutme Component style sheet ++++++++++ */
 .about-container {
   @include section-padding-style;
-
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -189,6 +188,7 @@
     align-items: center;
     padding-top: 1rem;
     max-width: 50vw;
+    margin-left: 10rem;
     /*    margin-top: 2rem; */
 
     h2 {
