--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -713,11 +713,11 @@ footer {
       display: flex;
       align-items: center;
 
-      .logo {
+      /*  .logo {
         @include logo-font-style;
         font-family: "MoonDance-Regular";
         font-size: 3rem;
-      }
+      } */
     }
 
     .about-me {
