cards data has been updated

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -330,6 +330,7 @@
             background: #fff;
             color: $text-color;
             text-align: center;
+            border-bottom: 3px solid #b48821;
             border-radius: 1rem;
             box-shadow: 0.5rem 0.5rem 1rem rgba(51, 51, 51, 0.2);
             overflow: hidden;
