--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -319,13 +319,12 @@
           justify-content: center;
           align-items: center;
           flex-wrap: wrap;
+          gap: 3rem;
 
           /* Individual card styles */
           .card-basic,
           .card-premium,
           .card-standard {
-            margin: 0 3rem 1rem 0;
-            padding: 0 0 0.5rem;
             width: 24%;
             background: #fff;
             color: $text-color;
@@ -335,6 +334,11 @@
             box-shadow: 0.5rem 0.5rem 1rem rgba(51, 51, 51, 0.2);
             overflow: hidden;
             transition: all 0.1s ease-in-out;
+
+            /* Card hover effect */
+            &:hover {
+              transform: scale(1.02);
+            }
 
             /* Card header */
             .card-header {
@@ -352,9 +356,10 @@
 
               p {
                 h3 {
-                  font-size: 1.4rem;
+                  @include heading-3;
+                  font-size: 1.5rem;
                   color: #b48821;
-                  padding: 1.3rem;
+                  padding: 1rem;
                 }
               }
 
@@ -363,15 +368,23 @@
                 color: $text-color;
                 list-style: none;
                 font-size: 1rem;
+                text-align: left;
+
+                .card-element {
+                  .circle-icon {
+                    margin-right: 0.5rem;
+                    color: #b48821;
+                  }
+                }
               }
 
               /* Card buttons */
               .btn {
                 margin: 0.5rem 0;
-                padding: 0.7rem 1rem;
+                padding: 0.6rem 0.9rem;
                 outline: none;
-                border-radius: 1rem;
-                font-size: 1rem;
+                border-radius: 0.7rem;
+                font-size: 0.9rem;
                 font-weight: 700;
                 color: #fff;
                 border: none;
@@ -403,13 +416,6 @@
           .header-premium,
           .btn-premium {
             background: #5a4411;
-          }
-
-          /* Hover effect for cards */
-          .card-basic:hover,
-          .card-premium:hover,
-          .card-standard:hover {
-            transform: scale(1.02);
           }
         }
       }
