--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -405,17 +405,17 @@
           /* Header and button styles for each card type */
           .header-basic,
           .btn-basic {
-            background: #a27a1e;
+            background: #b48821;
           }
 
           .header-standard,
           .btn-standard {
-            background: #7e5f17;
+            background: #b48821;
           }
 
           .header-premium,
           .btn-premium {
-            background: #5a4411;
+            background: #b48821;
           }
         }
       }
