--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -251,6 +251,7 @@
           border-radius: 50%;
           box-shadow: 0.5rem 0.5rem 1rem rgba(51, 51, 51, 0.2);
 
+          // Button and icon styles
           .button {
             display: flex;
             align-items: center;
@@ -329,19 +330,15 @@
             background: #fff;
             color: $text-color;
             text-align: center;
-            border-bottom: 3px solid #b48821;
             border-radius: 1rem;
             box-shadow: 0.5rem 0.5rem 1rem rgba(51, 51, 51, 0.2);
             overflow: hidden;
             transition: all 0.1s ease-in-out;
 
-            /* Card hover effect */
-            &:hover {
-              transform: scale(1.02);
-            }
-
             /* Yoga Tab header and button style */
             .yoga {
+              border-radius: 1rem;
+              border-bottom: 3px solid #b48821;
               .header-basic,
               .btn-basic {
                 background: #b48821;
@@ -360,39 +357,55 @@
 
             /* Meditaion Tab header and button style */
             .meditation {
+              border-radius: 1rem;
+              border-bottom: 3px solid;
+
+              .card-body {
+                h3 {
+                  color: #6b8e23;
+                }
+              }
               .header-basic,
               .btn-basic {
-                background: #f0e3c0;
+                background: #6b8e23;
               }
 
               .header-standard,
               .btn-standard {
-                background: #f0e3c0;
+                background: #6b8e23;
               }
 
               .header-premium,
               .btn-premium {
-                background: #f0e3c0;
+                background: #6b8e23;
               }
             }
 
             /* Retreat Tab header and button style */
             .retreat {
+              border-radius: 1rem;
+              border-bottom: 3px solid #008080;
               .header-basic,
               .btn-basic {
-                background: red;
+                background: #008080;
               }
 
               .header-standard,
               .btn-standard {
-                background: red;
+                background: #008080;
               }
 
               .header-premium,
               .btn-premium {
-                background: red;
+                background: #008080;
               }
             }
+
+            /* Card hover effect */
+            &:hover {
+              transform: scale(1.02);
+            }
+
             /* Card header */
             .card-header {
               height: 5rem;
