bug fixed in media query

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -142,6 +142,10 @@ a:hover {
   .notFound-page-container {
     margin: 0 2rem;
   }
+
+  .progress {
+    height: 9px;
+  }
   hr {
     width: 50px;
   }
