--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -127,9 +127,14 @@ a:hover {
     width: 90%;
     margin-top: 7rem;
   }
-
-  h1 {
-    font-size: 40px;
+  .progress {
+    height: 9px;
+  }
+  hr {
+    width: 50px;
+  }
+  .top h2 {
+    font-size: 25px;
   }
 
   i {
