commented out the code to work better on it

--- a/src/styles/media-query.scss
+++ b/src/styles/media-query.scss
@@ -216,6 +216,10 @@
   }
 }
 
+ /*Demo Container*/
+
+ 
+
 /* ++++++++++ Media Query between 361px and 600px  ++++++++++ */
 @media (min-width: 361px) and (max-width: #{$medium}) {
   .app {
