--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,17 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 /* Universal pre-defined style */
-*,
+/* *,
 *::before,
 *:after {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
+} */
 
 /* Root  pre-defined style*/
-:root {
+/* :root {
   font-size: calc(1rem + 0.5vw, 1.5rem);
-}
-
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+} */
