--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-/* @tailwind base; */
+/* @tailwind base; */ /* this will reset the root style that's why it is commented */
 @tailwind components;
 @tailwind utilities;
 /* Universal pre-defined style */
