--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -469,7 +469,7 @@
 .demo-container {
   display: flex;
   flex-direction: column;
-  align-items: start;
+  align-items: flex-start;
   justify-content: center;
   position: relative;
   background-image: url("../assets/images/demosession/pexels-marta.jpg");
