--- a/src/styles/media-query.scss
+++ b/src/styles/media-query.scss
@@ -145,6 +145,47 @@
       }
     }
 
+    /* start of demo component */
+    .demo {
+      font-size: 0.8rem;
+
+      .demo-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        $margin-size: 1rem;
+        gap: 0.2rem;
+
+        .demo-session-description {
+          width: 13rem;
+
+          p {
+            display: none;
+          }
+
+          ul {
+            margin: 0.5rem;
+            li {
+              margin: 0.1rem;
+            }
+          }
+
+          h6 {
+            font-size: 1.3rem;
+          }
+
+          button {
+            margin: 0.5rem;
+            font-size: 0.8rem;
+            height: 2rem;
+            font-weight: 500;
+            width: 6rem;
+          }
+        }
+      }
+    }
+    /* end of demo component  */
+
     /* Footer component */
     footer {
       .scroll-to-top {
@@ -216,9 +257,11 @@
   }
 }
 
- /*Demo Container*/
-
- 
+@media (min-width: #{$small}) {
+  h6 {
+    font-size: 1rem;
+  }
+}
 
 /* ++++++++++ Media Query between 361px and 600px  ++++++++++ */
 @media (min-width: 361px) and (max-width: #{$medium}) {
@@ -431,7 +474,6 @@
     /*----- End of Service component media query----- */
   }
 }
-
 /* ++++++++++ Media Query for Tablet screen with min 801px and max 1023px  ++++++++++ */
 @media (min-width: #{$large}) and (max-width: 1023px) {
   .app {
@@ -567,17 +609,7 @@
     }
   }
 }
-
 /* 
-
-
-
-
-
-
-
-
-
 
 Other media query
 */
@@ -769,7 +801,6 @@ Other media query
   }
   /*----- End of Footer component media query----- */
 }
-
 /* ++++++++++ Media Query for Desktop screen with min width of 1024px ++++++++++ */
 @media (min-width: $desktop) {
   .app {
