--- a/src/styles/media-query.scss
+++ b/src/styles/media-query.scss
@@ -363,6 +363,47 @@
         }
       }
     }
+
+    .demo {
+      font-size: 0.8rem;
+
+      .demo-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        $margin-size: 1rem;
+        gap: 0.2rem;
+
+        .demo-session-description {
+          width: 13rem;
+
+          p {
+            display: none;
+          }
+
+          ul {
+            margin: 0.5rem;
+            li {
+              margin: 0.1rem;
+            }
+          }
+
+          h6 {
+            font-size: 1.3rem;
+          }
+
+          button {
+            margin: 0.5rem;
+            font-size: 0.8rem;
+            height: 2rem;
+            font-weight: 500;
+            width: 6rem;
+          }
+        }
+      }
+    }
+    /* end of demo component  */
+
     /*----- End of Service component media query----- */
   }
 }
@@ -471,6 +512,45 @@
         }
       }
     }
+
+    /* start of the demo component */
+.demo {
+  font-size: 0.8rem;
+
+  .demo-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    $margin-size: 1rem;
+    gap: 0.2rem;
+
+    .demo-session-description {
+      width: 30rem;
+
+
+      ul {
+        margin: 0.5rem;
+        li {
+          margin: 0.1rem;
+        }
+      }
+
+      h6 {
+        font-size: 1.3rem;
+      }
+
+      button {
+        margin: 0.1rem;
+        font-size: 0.8rem;
+        height: 2rem;
+        font-weight: 500;
+        width: 6rem;
+      }
+    }
+  }
+}
+
+    /* end of the demo component */
     /*----- End of Service component media query----- */
   }
 }
