media query has been organized

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -5,14 +5,8 @@ $secondary-background-color: #ece8e7;
 $text-color: #333;
 $button-text-color: white;
 
-//Media Query breakpoints
-$phone-screen: 599px;
-$tablet-screen-min: 600px;
-$tablet-screen-max: 1023px;
-$desktop: 1024px;
-
-/* Media Query breakPoints for Service component */
+//Media Query breakpoints/
 $small: 360px;
 $medium: 600px;
-$large: 801px;
+$large: 800px;
 $xlarge: 1024px;
