--- a/src/styles/media-query.scss
+++ b/src/styles/media-query.scss
@@ -1,4 +1,4 @@
-/* ++++++++++ Media Query for max width of 360px ++++++++++ */
+/* +++ Media Query for max width of 360px +++ */
 @media (max-width: #{$small}) {
   .app {
     /* Services componenet */
@@ -216,10 +216,54 @@
   }
 }
 
-/* ++++++++++ Media Query between 361px and 600px  ++++++++++ */
+/* +++Media Query between 361px and 600px  +++*/
 @media (min-width: 361px) and (max-width: #{$medium}) {
   .app {
-    /*----- Start of Service component media query----- */
+    /*----- Start of Aboutme component media query----- */
+    .about-container {
+      flex-wrap: wrap;
+      .rectangle1,
+      .rectangle2 {
+        width: 250px;
+        height: 430px;
+        left: 3rem;
+      }
+      .rectangle1 {
+        border: 5px solid #b68a2352;
+        margin-left: 30px; //Add some spacing between the rectangles
+      }
+      .rectangle2 {
+        border: 5px solid #eaeae8;
+        margin-top: -15px;
+        margin-left: -5px; /* Add some spacing between the rectangles */
+      }
+      .about-image {
+        width: 300px;
+        height: 400px;
+        // border: 6px solid #b68a2352;
+      }
+      section {
+        gap: 0;
+        max-width: 100vw;
+        text-align: center;
+
+        h2 {
+          font-size: 1.5rem;
+          margin-bottom: 0;
+          margin-top: 2rem;
+          padding: 1rem;
+        }
+        p {
+          font-size: 1rem;
+          width: 100vw;
+          margin-bottom: 1rem;
+        }
+      }
+      /*----- End of Aboutme component media query----- */
+
+      /*----- Start of Service component media query----- */
+    }
+
     .service-container {
       margin-top: 2rem;
       width: 99%;
@@ -317,12 +361,83 @@
       }
     }
     /*----- End of Service component media query----- */
+
+    /* Start of the contact component media query */
+    .contact-container {
+      width: 99%;
+
+      .contact-sub-container {
+        .form-container {
+          width: 100%;
+
+          h2 {
+            font-size: 2rem;
+          }
+          h3 {
+            font-size: 1.5rem;
+          }
+        }
+        .contact-img {
+          display: none;
+        }
+      }
+    }
+    /* End of the contact component media query */
   }
 }
 
-/* ++++++++++ Media Query for Tablet screen with min 600px and max 800px  ++++++++++ */
-@media (min-width: 601px) and (max-width: 800px) {
+/* +++Media Query between 601px and 800px  +++*/
+@media (min-width: 601px) and (max-width: #{$large}) {
   .app {
+    .hero-container {
+      display: flex;
+      justify-content: center;
+
+      .hero {
+        width: 90%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 1rem;
+        flex-direction: column;
+        background: none;
+        .col1 {
+          width: 100%;
+
+          margin-left: 0;
+          margin-top: 0;
+          margin-bottom: 0;
+          order: 1;
+          h1 {
+            text-align: center;
+            font-size: 8rem;
+          }
+          h2 {
+            text-align: center;
+
+            font-size: 3rem;
+          }
+        }
+        .col2 {
+          position: relative;
+          order: 2;
+          margin-left: 0;
+          .ball {
+            width: 18rem;
+            height: 18rem;
+            margin-left: 0;
+            right: 10rem;
+            transform: translateX(20px);
+          }
+          img {
+            width: 18rem;
+            height: 15rem;
+            /*   margin-left: 5rem; */
+            margin-top: 1rem;
+          }
+        }
+      }
+    }
     /*----- Start of Service component media query----- */
     .service-container {
       margin-top: 2rem;
@@ -425,252 +540,6 @@
       }
     }
     /*----- End of Service component media query----- */
-  }
-}
-
-/* ++++++++++ Media Query for Tablet screen with min 801px and max 1023px  ++++++++++ */
-@media (min-width: #{$large}) and (max-width: 1023px) {
-  .app {
-    /*----- Start of Service component media query----- */
-    .service-container {
-      margin-top: 2rem;
-      width: 99%;
-
-      .header-container {
-        h3 {
-          margin-bottom: 3rem;
-        }
-      }
-
-      .tab-container {
-        /*  border: 1px solid green; */
-        width: 100%;
-        padding: 3rem;
-
-        .navigation {
-          padding-left: 0;
-          gap: 16rem;
-          margin-bottom: 1rem;
-          justify-content: center;
-
-          li {
-            margin: 0 auto;
-            padding: 0;
-
-            .button {
-              .icon {
-                width: 8rem;
-                height: 8rem;
-
-                img {
-                  height: 5.5rem;
-                  width: 5.5rem;
-                }
-              }
-            }
-          }
-        }
-      }
-
-      .service-section {
-        padding: 2rem;
-
-        .card-container {
-          box-shadow: 0.5rem 0.5rem 1rem rgba(51, 51, 51, 0.2);
-          border-radius: 1rem;
-          overflow: hidden;
-          transition: all 0.1ms ease-in-out;
-          margin: 0;
-          width: 70%;
-          background: none;
-
-          &:hover {
-            transform: scale(1.02);
-          }
-
-          .img-fluid {
-            display: none;
-          }
-
-          .col-md-8 {
-            width: 100%;
-          }
-          .card-body {
-            position: relative;
-
-            .card-title {
-              position: absolute;
-              top: 0;
-              left: 0;
-              right: 0;
-              clip-path: polygon(0 0, 100% 0%, 100% 85%, 0% 100%);
-              background-color: #b48821;
-              width: 100%;
-              text-align: center;
-              font-size: 2.2rem;
-              padding: 2rem;
-              color: white;
-            }
-
-            .card-text {
-              margin-top: 6rem;
-              font-size: 1.6rem;
-            }
-
-            .subscribe-btn-container {
-              display: flex;
-              justify-content: center;
-              .subscribe-btn {
-                height: 3.5rem;
-                width: 10rem;
-                font-size: 1.6rem;
-                font-weight: 400;
-              }
-            }
-          }
-        }
-      }
-    }
-    /*----- End of Service component media query----- */
-  }
-}
-
-/* ++++++++++ Media Query for Desktop screen with min width of 1024px ++++++++++ */
-@media (min-width: #{$xlarge}) and (max-width: 1300px) {
-  .app {
-    .service-container {
-      margin-top: 2rem;
-      width: 99%;
-
-      .tab-container {
-        /*  border: 1px solid green; */
-        /*    width: 100%; */
-
-        .navigation {
-          gap: 22rem;
-        }
-      }
-
-      .service-section {
-        .card-container {
-          width: 85%;
-
-          .card-text {
-            font-size: 1.1rem;
-          }
-        }
-      }
-    }
-  }
-}
-
-/* 
-
-
-
-
-
-
-
-
-
-
-Other media query
-*/
-/* ++++++++++ Media Query for Phone screen with max width of 599px ++++++++++ */
-@media (max-width: $phone-screen) {
-  .app {
-    /*----- Start of Navbar component media query----- */
-    .navbar-container {
-    }
-    /*----- End of Navbar component media query----- */
-
-    /*----- Start of Aboutme component media query----- */
-    .about-container {
-      flex-wrap: wrap;
-      .rectangle1,
-      .rectangle2 {
-        width: 250px;
-        height: 430px;
-        left: 3rem;
-      }
-      .rectangle1 {
-        border: 5px solid #b68a2352;
-        margin-left: 30px; //Add some spacing between the rectangles
-      }
-      .rectangle2 {
-        border: 5px solid #eaeae8;
-        margin-top: -15px;
-        margin-left: -5px; /* Add some spacing between the rectangles */
-      }
-      .about-image {
-        width: 300px;
-        height: 400px;
-        // border: 6px solid #b68a2352;
-      }
-      section {
-        gap: 0;
-        max-width: 100vw;
-        text-align: center;
-
-        h2 {
-          font-size: 1.5rem;
-          margin-bottom: 0;
-          margin-top: 2rem;
-          padding: 1rem;
-        }
-        p {
-          font-size: 1rem;
-          width: 100vw;
-          margin-bottom: 1rem;
-        }
-      }
-      /*----- End of Aboutme component media query----- */
-
-      /*----- Start of Feedback component media query----- */
-      .feedback-container {
-      }
-      .contact-container {
-        width: 99%;
-
-        .contact-sub-container {
-          .form-container {
-            width: 100%;
-
-            h2 {
-              font-size: 2rem;
-            }
-            h3 {
-              font-size: 1.5rem;
-            }
-          }
-          .contact-img {
-            display: none;
-          }
-        }
-      }
-      /*----- End of Feedback component media query----- */
-
-      /*----- Start of Demo component media query----- */
-      .demo-container {
-      }
-      /*----- End of Demo component media query----- */
-    }
-  }
-}
-
-/* ++++++++++ Media Query for Tablet screen with min 600px and max 1023px  ++++++++++ */
-@media (min-width: $tablet-screen-min) and (max-width: $tablet-screen-max) {
-  .app {
-    /*----- Start of Navbar component media query----- */
-    .navbar-container {
-    }
-    /*----- End of Navbar component media query----- */
-
-    /*----- Start of Hero component media query----- */
-    .hero-container {
-    }
-    /*----- End of Hero component media query----- */
 
     /*----- Start of Aboutme component media query----- */
     .about-container {
@@ -705,23 +574,7 @@ Other media query
         }
       }
     }
-    /*----- End of Aboutme component media query----- */
 
-    /*----- Start of Service component media query----- */
-    .service-container {
-    }
-    /*----- End of Service component media query----- */
-
-    /*----- Start of Feedback component media query----- */
-    .feedback-container {
-    }
-    /*----- End of Feedback component media query----- */
-
-    /*----- Start of Demo component media query----- */
-
-    /*----- End of Demo component media query----- */
-
-    /*----- Start of Contact component media query----- */
     .contact-container {
       width: 99%;
 
@@ -762,66 +615,196 @@ Other media query
         }
       }
     }
+    /*----- End of Footer component media query----- */
   }
-  /*----- End of Footer component media query----- */
 }
 
-/* ++++++++++ Media Query for Desktop screen with min width of 1024px ++++++++++ */
-@media (min-width: $desktop) {
+/* +++Media Query between 801px and 1023px  +++*/
+@media (min-width: 801px) and (max-width: #{$xlarge}) {
   .app {
-    /*----- Start of Navbar component media query----- */
-    .navbar-container {
-    }
-    /*----- End of Navbar component media query----- */
-
-    /*----- Start of Hero component media query----- */
-    .hero-container {
-    }
-    /*----- End of Hero component media query----- */
-
-    /*----- Start of Aboutme component media query----- */
     .about-container {
       about-image {
         width: 400px;
         height: 600px;
       }
-
-      /*----- End of Aboutme component media query----- */
-
       /*----- Start of Service component media query----- */
       .service-container {
+        margin-top: 2rem;
+        width: 99%;
+
+        .header-container {
+          h3 {
+            margin-bottom: 3rem;
+          }
+        }
+
+        .tab-container {
+          /*  border: 1px solid green; */
+          width: 100%;
+          padding: 3rem;
+
+          .navigation {
+            padding-left: 0;
+            gap: 16rem;
+            margin-bottom: 1rem;
+            justify-content: center;
+
+            li {
+              margin: 0 auto;
+              padding: 0;
+
+              .button {
+                .icon {
+                  width: 8rem;
+                  height: 8rem;
+
+                  img {
+                    height: 5.5rem;
+                    width: 5.5rem;
+                  }
+                }
+              }
+            }
+          }
+        }
+
+        .service-section {
+          padding: 2rem;
+
+          .card-container {
+            box-shadow: 0.5rem 0.5rem 1rem rgba(51, 51, 51, 0.2);
+            border-radius: 1rem;
+            overflow: hidden;
+            transition: all 0.1ms ease-in-out;
+            margin: 0;
+            width: 70%;
+            background: none;
+
+            &:hover {
+              transform: scale(1.02);
+            }
+
+            .img-fluid {
+              display: none;
+            }
+
+            .col-md-8 {
+              width: 100%;
+            }
+            .card-body {
+              position: relative;
+
+              .card-title {
+                position: absolute;
+                top: 0;
+                left: 0;
+                right: 0;
+                clip-path: polygon(0 0, 100% 0%, 100% 85%, 0% 100%);
+                background-color: #b48821;
+                width: 100%;
+                text-align: center;
+                font-size: 2.2rem;
+                padding: 2rem;
+                color: white;
+              }
+
+              .card-text {
+                margin-top: 6rem;
+                font-size: 1.6rem;
+              }
+
+              .subscribe-btn-container {
+                display: flex;
+                justify-content: center;
+                .subscribe-btn {
+                  height: 3.5rem;
+                  width: 10rem;
+                  font-size: 1.6rem;
+                  font-weight: 400;
+                }
+              }
+            }
+          }
+        }
       }
       /*----- End of Service component media query----- */
-
-      /*----- Start of Gallery component media query----- */
-      .gallery-container {
+    }
+    .hero-container {
+      .hero {
+        .col1 {
+          margin-bottom: 20rem;
+          margin-top: 0.5rem;
+          margin-left: 120px;
+          h1 {
+            font-size: 10rem;
+          }
+          h2 {
+            font-size: 3rem;
+          }
+        }
+        .col2 {
+          margin-left: -10rem;
+          .ball {
+            width: 26rem;
+            height: 26rem;
+          }
+          .img {
+            width: 25rem;
+            height: 18rem;
+            margin-right: 4rem;
+          }
+        }
       }
-      /*----- End of Gallery component media query----- */
-
-      /*----- Start of Feedback component media query----- */
-      .feedback-container {
-      }
-      /*----- End of Feedback component media query----- */
-
-      /*----- Start of Demo component media query----- */
-      .demo-container {
-      }
-      /*----- End of Demo component media query----- */
-
-      /*----- Start of Contact component media query----- */
-      .contact-container {
-      }
-      /*----- End of Contact component media query----- */
-
-      /*----- Start of Footer component media query----- */
-      footer {
-      }
-      /*----- Start of Footer component media query----- */
     }
   }
-}
-/*----------- Hero Section ------------------*/
 
+  /* ++++++++++ Media Query for Desktop screen with min width of 1024px ++++++++++ */
+  @media (min-width: #{$xlarge}) and (max-width: 1300px) {
+    .app {
+      .service-container {
+        margin-top: 2rem;
+        width: 99%;
+
+        .tab-container {
+          /*  border: 1px solid green; */
+          /*    width: 100%; */
+
+          .navigation {
+            gap: 22rem;
+          }
+        }
+
+        .service-section {
+          .card-container {
+            width: 85%;
+
+            .card-text {
+              font-size: 1.1rem;
+            }
+          }
+        }
+      }
+    }
+  }
+
+  /* 
+
+
+
+
+
+
+
+
+
+
+Other media query
+*/
+
+  /* ++++++++++ Media Query for Desktop screen with min width of 1024px ++++++++++ */
+}
+
+/* +++Media Query between 1150px and 1300px  +++*/
 @media (min-width: 1150px) and (max-width: 1300px) {
   .app {
     .hero-container {
@@ -854,92 +837,8 @@ Other media query
   }
 }
 
-@media (min-width: 900px) and (max-width: 1150px) {
-  .app {
-    .hero-container {
-      .hero {
-        .col1 {
-          margin-bottom: 20rem;
-          margin-top: 0.5rem;
-          margin-left: 120px;
-          h1 {
-            font-size: 10rem;
-          }
-          h2 {
-            font-size: 3rem;
-          }
-        }
-        .col2 {
-          margin-left: -10rem;
-          .ball {
-            width: 26rem;
-            height: 26rem;
-          }
-          .img {
-            width: 25rem;
-            height: 18rem;
-            margin-right: 4rem;
-          }
-        }
-      }
-    }
-  }
-}
-
-@media (min-width: 500px) and (max-width: 900px) {
-  .app {
-    .hero-container {
-      display: flex;
-      justify-content: center;
-
-      .hero {
-        width: 90%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 1rem;
-        flex-direction: column;
-        background: none;
-        .col1 {
-          width: 100%;
-
-          margin-left: 0;
-          margin-top: 0;
-          margin-bottom: 0;
-          order: 1;
-          h1 {
-            text-align: center;
-            font-size: 8rem;
-          }
-          h2 {
-            text-align: center;
-
-            font-size: 3rem;
-          }
-        }
-        .col2 {
-          position: relative;
-          order: 2;
-          margin-left: 0;
-          .ball {
-            width: 18rem;
-            height: 18rem;
-            margin-left: 0;
-            right: 10rem;
-            transform: translateX(20px);
-          }
-          img {
-            width: 18rem;
-            height: 15rem;
-            /*   margin-left: 5rem; */
-            margin-top: 1rem;
-          }
-        }
-      }
-    }
-  }
-}
-@media (min-width: 1300px) and (max-width: 1600px) {
+/* +++Media Query between 1301px and 1600px  +++*/
+@media (min-width: 1301px) and (max-width: 1600px) {
   .app {
     .hero-container {
       .hero {
